@@ -1,3 +1,7 @@
+2007-10-18  Emmanuel Dreyfus  <manu@netbsd.org>
+	* src/racoon/{isakmp_unity.[ch]|isakmp_cfg.c|racoon.conf.5}:
+	  Add SPLITNET_{INCLUDR_LOCAL}_CIDR to hook scripts
+
 2007-10-15  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/libipsec/pfkey.c: Try to increase the buffer size of the
 	  pfkey socket, this may help things when we have a huge SPD.
